--- a/dashboard2.css
+++ b/dashboard2.css
@@ -5,13 +5,13 @@
 
 main{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: #e9e9e9;
     background-image: url(teach_stud_default-ef51b1e5.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: fixed;
+    /* position: fixed; */
 }
 main .nav{
     width: 100%;
